Ready for atlas2allen with common keys

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -68,7 +68,7 @@
     "        structure = Path(file).stem\n",
     "        filepath = os.path.join(dirpath, file)\n",
     "        origin = np.loadtxt(filepath)\n",
-    "        origins[structure] = origin\n",
+    "        origins[structure] = origin * 10\n",
     "    return origins\n",
     "\n",
     "def compute_affine_transformation(src_pts, dst_pts):\n",
@@ -106,50 +106,7 @@
     "    # Compute RMS error\n",
     "    rmse = np.sqrt(np.mean(np.sum((dst_pts - dst_pred)**2, axis=1)))\n",
     "\n",
-    "    return T, rmse, dst_pred\n",
-    "\n",
-    "def make_homogeneous(mat3):\n",
-    "    M = np.eye(4, dtype=float)\n",
-    "    M[:3, :3] = mat3\n",
-    "    return M\n",
-    "\n",
-    "def diag4(spacing):\n",
-    "    s = np.array(spacing, dtype=float)\n",
-    "    D = np.eye(4, dtype=float)\n",
-    "    D[0,0], D[1,1], D[2,2] = s[0], s[1], s[2]\n",
-    "    return D\n",
-    "\n",
-    "def sitk_affine_to_matrix4x4(tx: sitk.Transform):\n",
-    "    params = list(tx.GetParameters())\n",
-    "    \n",
-    "    # First 9 values → affine matrix\n",
-    "    A = np.array(params[:9]).reshape(3,3)\n",
-    "\n",
-    "    # Last 3 values → translation\n",
-    "    t = np.array(params[9:12]).reshape(3)\n",
-    "\n",
-    "    # Build homogeneous 4×4\n",
-    "    M = np.eye(4)\n",
-    "    M[:3,:3] = A\n",
-    "    M[:3, 3] = t\n",
-    "\n",
-    "    return M\n",
-    "\n",
-    "def mat_to_matrix4x4(mat):\n",
-    "    params = list(mat.parameters)\n",
-    "    \n",
-    "    # First 9 values → affine matrix\n",
-    "    A = np.array(params[:9]).reshape(3,3)\n",
-    "\n",
-    "    # Last 3 values → translation\n",
-    "    t = np.array(params[9:12]).reshape(3)\n",
-    "\n",
-    "    # Build homogeneous 4×4\n",
-    "    M = np.eye(4)\n",
-    "    M[:3,:3] = A\n",
-    "    M[:3, 3] = t\n",
-    "\n",
-    "    return M"
+    "    return T, rmse, dst_pred\n"
    ]
   },
   {
@@ -165,20 +122,21 @@
     "fixed_all = get_origins(fixed_name)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
     "bad_keys = ('10N_L','10N_R')\n",
-    "good_keys = set(common_keys) - set(bad_keys)\n",
+    "#good_keys = set(common_keys) - set(bad_keys)\n",
+    "good_keys = ['3N_L','3N_R', '4N_L','4N_R', '5N_L', '5N_R', '6N_L', '6N_R']\n",
+    "good_keys.extend(['7N_L','7N_R'])\n",
+    "\n",
     "moving_src = np.array([moving_all[s] for s in good_keys])\n",
     "fixed_src = np.array([fixed_all[s] for s in good_keys])\n",
     "print(len(good_keys))\n",
     "transformation_matrix, rmse, predictions = compute_affine_transformation(moving_src, fixed_src)\n",
     "data_path = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
-    "transformation_matrix_path = os.path.join(data_path, moving_name, f'{moving_name}_{fixed_name}_10.0um')\n",
-    "np.save(transformation_matrix_path, transformation_matrix)\n",
     "print(transformation_matrix)\n",
     "print('rmse', rmse)\n",
     "\n",
     "df_list = []\n",
     "predicted_dict = {}\n",
-    "for structure in good_keys:    \n",
+    "for structure in common_keys:    \n",
     "    moving0 = np.array(moving_all[structure])\n",
     "    fixed0 = np.array(fixed_all[structure]) \n",
     "    predicted0 = affine_transform_point(moving0, transformation_matrix)\n",
@@ -203,16 +161,6 @@
     "# MD585 to Allen 263.31435 observations: 37\n",
     "# MD589 to Allen 260.02 observations: 37\n",
     "# MD594 to Allen 250.79 observations: 37"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f49fd61d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "0.452*32"
    ]
   },
   {
@@ -249,7 +197,7 @@
    "execution_count": null,
    "id": "9d3a9a9a",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -267,374 +215,87 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65f3367a",
+   "id": "b2c16960",
    "metadata": {},
    "outputs": [],
    "source": [
-    "registered_origin_path = '/net/birdstore/Active_Atlas_Data/data_root/atlas_data/AtlasV8/registered_origin'\n",
-    "for structure, origin in moving_all.items():\n",
-    "    new_origin = affine_transform_point(origin, transformation_matrix)\n",
-    "    new_origin_path = os.path.join(registered_origin_path, f'{structure}.txt')\n",
-    "    print(structure, np.round(origin,2), np.round(new_origin,2))\n",
-    "    np.savetxt(new_origin_path, new_origin)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8292a90a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "v_m = moving image voxel coordinate (i,j,k) (your fiducials)\n",
-    "s_m = (2,2,20) µm = moving image spacing\n",
-    "s_affine = (10,10,10) µm = the spacing that the affine was computed with / expects\n",
-    "A = 4×4 affine transform you have (homogeneous). You must know what A maps to/from (see cases below).\n",
-    "s_f = fixed image spacing (if you want final voxel indices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82d0fa8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.array(\n",
-    "[[ 9.53477969e-01,  1.09410189e-01,  2.63478745e-02,  4.55867422e+02],\n",
-    " [-7.88806971e-02,  9.05905687e-01, -5.44966440e-02,  3.52298187e+02],\n",
-    " [-1.20042733e-02,  5.02446347e-02,  9.32364556e-01, -6.78249849e+01],\n",
-    " [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  1.00000000e+00]]\n",
-    ")\n",
-    "print(A.shape, A.dtype)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ee5d0f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fiducials_vox = np.array([[36913.835658476906, 30879.23503839053, 280.]], dtype=float)\n",
+    "def fit_affine_3d(src_pts, tgt_pts, return_residuals=False):\n",
+    "    \"\"\"\n",
+    "    Compute best-fit affine transform (3D) mapping src_pts -> tgt_pts using least squares.\n",
     "\n",
-    "A = np.array(\n",
-    "[[ 9.53477969e-01,  1.09410189e-01,  2.63478745e-02,  4.55867422e+02],\n",
-    " [-7.88806971e-02,  9.05905687e-01, -5.44966440e-02,  3.52298187e+02],\n",
-    " [-1.20042733e-02,  5.02446347e-02,  9.32364556e-01, -6.78249849e+01],\n",
-    " [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  1.00000000e+00]]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e519be1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "um = 10.0\n",
-    "allen_size = (182,1000,1140)\n",
-    "fixed = sitk.Image(allen_size, sitk.sitkFloat32)\n",
-    "fixed.SetOrigin((0,0,0))\n",
-    "fixed.SetSpacing((um, um, um))\n",
-    "print('spacing', fixed.GetSpacing())\n",
-    "print('origin', fixed.GetOrigin())\n",
-    "print('dir', fixed.GetDirection())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c6d0e92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
-    "moving_name = \"DK55\"\n",
-    "#transform_path = os.path.join(regpath, moving_name, f\"{moving_name}_Allen_{um}x{um}x{um}um.tfm\")\n",
-    "transform_path = os.path.join(regpath, moving_name, \"DK55_to_Allen_10.0.tfm\")\n",
-    "print(transform_path)\n",
-    "sitk_transform = sitk.ReadTransform(transform_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3c1221c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sitk_transform.GetParameters()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cefbac34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = sitk_affine_to_matrix4x4(sitk_transform)\n",
-    "np.round(A,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff4ead20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# goal is 271, 300, 97\n",
-    "#This works!\n",
-    "# user values\n",
-    "moving_index = (1311.0, 644.0, 240.0)\n",
-    "moving_spacing = (10.4, 10.4, 20)   # µm\n",
+    "    Args:\n",
+    "        src_pts: (N,3) array-like of source fiducial points.\n",
+    "        tgt_pts: (N,3) array-like of target fiducial points.\n",
+    "        return_residuals: if True, also return the residual vector for each point (N,).\n",
     "\n",
-    "# put them into microns\n",
-    "phys_moving = (moving_index[0]*moving_spacing[0],\n",
-    "               moving_index[1]*moving_spacing[1],\n",
-    "               moving_index[2]*moving_spacing[2])\n",
-    "print(\"moving physical (µm) =\", phys_moving)\n",
-    "phys_fixed = sitk_transform.GetInverse().TransformPoint(phys_moving)\n",
-    "print(\"fixed physical (µm) =\", np.round(phys_fixed))\n",
-    "fixed_index = fixed.TransformPhysicalPointToIndex(phys_fixed)\n",
-    "print(f'moved to fixed space {um}um {fixed_index}')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6eb3a56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phys_moving"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba018ae1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fiducial points from the moving brain\n",
-    "for phys_m in [phys_moving]:\n",
-    "    phys_f = sitk_transform.TransformPoint(phys_m)\n",
-    "    idx_f = fixed.TransformPhysicalPointToIndex(phys_f)\n",
-    "    print(\"phys fixed\", phys_f)\n",
-    "    print(\"fixed_index:\", idx_f)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e08f71e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fiducials_vox = np.array([(28037, 25992,122)])\n",
-    "print(fiducials_vox.shape)\n",
-    "s_m = (0.325, 0.325, 20.0)    # moving spacing in microns (given)\n",
-    "s_affine = (25.0, 25.0, 25.0)  # spacing that affine expects / was computed with\n",
-    "# If you know the fixed spacing, set it; otherwise set to None\n",
-    "s_f = (25.0, 25.0, 25.0)  # example fixed spacing (change if different) or None\n",
+    "    Returns:\n",
+    "        H: (4,4) numpy array, homogeneous affine transform such that:\n",
+    "           transformed = (H @ [x,y,z,1])[:3] approximates target.\n",
+    "        rmse: float, root mean square error between transformed source and target points.\n",
+    "        (optional) residuals: (N,) array of Euclidean distances for each point (only if return_residuals=True)\n",
     "\n",
-    "# Suppose A is the 4x4 affine you have (replace with your matrix)\n",
-    "# Here we create an example identity-like A for demonstration:\n",
-    "#A = np.eye(4)  # replace with your real 4x4 affine matrix\n",
-    "A = sitk_affine_to_matrix4x4(sitk_transform)\n",
+    "    Notes:\n",
+    "        - For an exact unique solution you need >= 4 non-coplanar points; with fewer points\n",
+    "          the function still returns the least-squares best fit (may be underdetermined).\n",
+    "    \"\"\"\n",
+    "    src = np.asarray(src_pts, dtype=float)\n",
+    "    tgt = np.asarray(tgt_pts, dtype=float)\n",
+    "    if src.shape != tgt.shape:\n",
+    "        raise ValueError(\"src_pts and tgt_pts must have the same shape (N,3).\")\n",
+    "    if src.ndim != 2 or src.shape[1] != 3:\n",
+    "        raise ValueError(\"src_pts and tgt_pts must be (N,3) arrays.\")\n",
     "\n",
-    "# Build scale matrices (homogeneous)\n",
-    "S_m = diag4(s_m)\n",
-    "S_aff = diag4(s_affine)\n",
-    "S_f = diag4(s_f) if s_f is not None else None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94681046",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fiducial_indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28852769",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "moving_spacing = (0.325, 0.325, 20.0)   # microns\n",
-    "moving_origin = (0.0, 0.0, 0.0)     # set from your image if available\n",
-    "moving_direction = (1.0,0.0,0.0, 0.0,1.0,0.0, 0.0,0.0,1.0)  # 3x3 row-major; set from image if available\n",
+    "    N = src.shape[0]\n",
+    "    if N < 1:\n",
+    "        raise ValueError(\"At least one point is required.\")\n",
     "\n",
-    "# Load the transform saved from registration (example .tfm)\n",
-    "transform = sitk_transform\n",
+    "    # Build design matrix X: N x 4 with last column ones\n",
+    "    X = np.hstack([src, np.ones((N, 1), dtype=float)])   # shape (N,4)\n",
+    "    Y = tgt                                            # shape (N,3)\n",
     "\n",
-    "# helper to convert index -> physical (microns)\n",
-    "def index_to_physical(index, spacing, origin=(0,0,0), direction=(1,0,0, 0,1,0, 0,0,1)):\n",
-    "    idx = np.asarray(index, dtype=float)\n",
-    "    sp = np.asarray(spacing, dtype=float)\n",
-    "    # apply spacing\n",
-    "    scaled = idx * sp  # in microns from image origin-aligned axes\n",
-    "    # apply direction 3x3\n",
-    "    dir_mat = np.array(direction).reshape(3,3)\n",
-    "    phys_rel = dir_mat.dot(scaled)\n",
-    "    origin = np.asarray(origin, dtype=float)\n",
-    "    return tuple(origin + phys_rel)\n",
+    "    # Solve for 3x4 matrix M^T (we solve X * M^T = Y so M^T = pinv(X) @ Y)\n",
+    "    # Using numpy.linalg.lstsq for numerical stability\n",
+    "    M_transpose, residuals_sum_sq, rank, s = np.linalg.lstsq(X, Y, rcond=None)\n",
+    "    # M_transpose shape: (4,3) because we solved X (N,4) * (4,3) = (N,3)\n",
+    "    M = M_transpose.T   # now (3,4)\n",
     "\n",
-    "# convert and transform\n",
-    "physical_points = [index_to_physical(pt, moving_spacing, moving_origin, moving_direction)\n",
-    "                   for pt in fiducial_indices]\n",
+    "    # Convert to homogeneous 4x4 matrix H\n",
+    "    H = np.eye(4, dtype=float)\n",
+    "    H[:3, :4] = M\n",
     "\n",
-    "# apply transform (SimpleITK expects points in same physical units as images; here microns)\n",
-    "transformed_physical = [transform.GetInverse().TransformPoint(p) for p in physical_points]\n",
-    "print(transformed_physical)"
+    "    # Transform source pts\n",
+    "    src_h = np.hstack([src, np.ones((N, 1), dtype=float)])  # (N,4)\n",
+    "    transformed = (src_h @ M.T)  # (N,3)\n",
+    "\n",
+    "    # Per-point Euclidean residuals and RMSE\n",
+    "    diffs = transformed - tgt\n",
+    "    dists = np.linalg.norm(diffs, axis=1)\n",
+    "    rmse = np.sqrt(np.mean(np.sum(diffs**2, axis=1)))\n",
+    "\n",
+    "    if return_residuals:\n",
+    "        return H, rmse, dists\n",
+    "    else:\n",
+    "        return H, rmse\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "192f8055",
+   "id": "04a72eb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "physical_points"
+    "R, error = fit_affine_3d(moving_src, fixed_src)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af25391d",
+   "id": "8fb31797",
    "metadata": {},
    "outputs": [],
    "source": [
-    "allenpath = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/ALLEN771602/ALLEN771602_25.0x25.0x25.0um_sagittal.tif'\n",
-    "allen = sitk.ReadImage(allenpath)\n",
-    "print(allen.GetOrigin())\n",
-    "print(allen.GetSize())\n",
-    "allen.SetSpacing((25.0, 25.0, 25.0))\n",
-    "outpath = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen/ALLEN771602_25.0x25.0x25.0um_sagittal.nii'\n",
-    "sitk.WriteImage(allen, outpath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0169e504",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import shutil\n",
-    "import ants"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ea263d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "moving_name = 'DK55'\n",
-    "um = 25.0\n",
-    "regpath = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
-    "transform_path = os.path.join(regpath, moving_name, 'DK55ToAllen_affine.mat')\n",
-    "inv_transform_path = os.path.join(regpath, moving_name, 'AllenToDK55_affine.mat')\n",
-    "#transform = ants.read_transform(transform_path)\n",
-    "#inv_transform = ants.read_transform(inv_transform_path)\n",
-    "moving_image_path = os.path.join(regpath, moving_name, \"DK55_10.4x10.4x20um_sagittal.nii\")\n",
-    "fixed_image_path = os.path.join(regpath, \"Allen\", f\"Allen_{um}x{um}x{um}um_sagittal.nii\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb9262fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mi = ants.image_read(moving_image_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e83aa83f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fi = ants.image_read(fixed_image_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39466bf7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mi.spacing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20e36b4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mytx = ants.registration(fixed=fi, moving=mi, type_of_transform = 'Affine' )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7d30077",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shutil.copyfile(mytx['fwdtransforms'][0], transform_path)\n",
-    "shutil.copyfile(mytx['invtransforms'][0], inv_transform_path)\n",
-    "transform = ants.read_transform(transform_path)\n",
-    "inv_transform = ants.read_transform(inv_transform_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "175f670b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = mat_to_matrix4x4(inv_transform)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41f0cc6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pts = (1062, 1062, 130)\n",
-    "affine_transform_point(pts, A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dca90c7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inv_transform.parameters"
+    "error"
    ]
   }
  ],
