Cleaning up registrationa and atlas code

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -111,10 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b6548580",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n",
+      "[[ 9.23410640e-01  4.25674435e-03 -2.94449797e-02 -2.40165854e+02]\n",
+      " [ 8.88233835e-02  1.24662615e+00  8.04230976e-02 -3.08364670e+03]\n",
+      " [ 6.54347473e-02  5.25420672e-02  1.16061418e+00 -2.90479092e+02]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "rmse 137.6697816864496\n"
+     ]
+    }
+   ],
    "source": [
     "moving_name = 'MD585'\n",
     "fixed_name = 'Allen'\n",
@@ -122,9 +143,9 @@
     "fixed_all = get_origins(fixed_name)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
     "bad_keys = ('10N_L','10N_R')\n",
-    "#good_keys = set(common_keys) - set(bad_keys)\n",
-    "good_keys = ['3N_L','3N_R', '4N_L','4N_R', '5N_L', '5N_R', '6N_L', '6N_R']\n",
-    "good_keys.extend(['7N_L','7N_R'])\n",
+    "good_keys = set(common_keys) - set(bad_keys)\n",
+    "#good_keys = ['3N_L','3N_R', '4N_L','4N_R', '5N_L', '5N_R', '6N_L', '6N_R']\n",
+    "#good_keys.extend(['7N_L','7N_R'])\n",
     "\n",
     "moving_src = np.array([moving_all[s] for s in good_keys])\n",
     "fixed_src = np.array([fixed_all[s] for s in good_keys])\n",
@@ -214,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b2c16960",
+   "execution_count": 5,
+   "id": "4c6742ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,8 +301,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "04a72eb8",
+   "execution_count": 6,
+   "id": "8281922d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,10 +311,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8fb31797",
+   "execution_count": 7,
+   "id": "6b9203d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "62.84443795982029"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "error"
    ]
