--- a/src/atlas/notebooks/view_volumes.ipynb
+++ b/src/atlas/notebooks/view_volumes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bdf185d3",
    "metadata": {},
    "outputs": [],
@@ -43,10 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bfec3576",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "PIPELINE_ROOT = Path('./').absolute().parents[1]\n",
     "PIPELINE_ROOT = PIPELINE_ROOT.as_posix()\n",
@@ -243,27 +251,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "bbf80e8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_values, counts = np.unique(volume.astype(np.uint8), return_counts=True)\n",
-    "# 2. Get the indices that would sort the counts\n",
-    "sorted_indices = np.argsort(counts)\n",
-    "print(f\"Sorted indices (ascending by count): {sorted_indices}\")\n",
-    "\n",
-    "# 3. Get the indices for the two highest counts (last two elements)\n",
-    "highest_count_indices = sorted_indices[-2:]\n",
-    "\n",
-    "# 4. Get the final two unique values with the highest counts\n",
-    "two_highest = unique_values[highest_count_indices]\n",
-    "print(f\"\\nThe two highest unique IDs are: {two_highest}\")\n",
-    "\n",
-    "# To check the counts of the highest IDs\n",
-    "highest_counts = counts[highest_count_indices]\n",
-    "print(f\"Their respective counts are: {highest_counts}\")"
+    "reg_path = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
+    "brain = \"CTB016\"\n",
+    "brainstem_path = os.path.join(reg_path, brain, \"CTB016_10.0x10.0x10.0um_sagittal.nii\")\n",
+    "img = sitk.ReadImage(brainstem_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "19b157ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = sitk.GetArrayFromImage(img)      # shape: (Z, Y, X)\n",
+    "spacing = (10.4, 10.4, 20)             # (sx, sy, sz)\n",
+    "origin = img.GetOrigin()\n",
+    "direction = img.GetDirection()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c65685c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "permuted = sitk.PermuteAxes(img, [1, 2, 0])\n",
+    "\n",
+    "# ---------------------------\n",
+    "# Flip if cerebellum ends up on the wrong side\n",
+    "# Requirement: cerebellum on LEFT, spinal cord on RIGHT\n",
+    "#\n",
+    "# After permuting, axis 2 becomes L–R.\n",
+    "# If cerebellum appears on the right, flip axis 2.\n",
+    "# ---------------------------\n",
+    "sag_img = sitk.Flip(permuted, [False, False, True])   # flip last axis only\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "93307abd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_spacing = (spacing[2], spacing[1], spacing[0])  # reordered\n",
+    "new_direction = (1,0,0,  0,1,0,  0,0,1)              # orthonormal\n",
+    "new_origin = origin \n",
+    "sag_img.SetSpacing(new_spacing)\n",
+    "sag_img.SetDirection(new_direction)\n",
+    "sag_img.SetOrigin(new_origin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "507576da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spacing (0.32499998807907104, 20.0, 0.32499998807907104)\n",
+      "direction (0.0, 0.0, -1.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0)\n",
+      "size (2086, 127, 1276)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('spacing', sag_img.GetSpacing())\n",
+    "print('direction', sag_img.GetDirection())\n",
+    "print('size', sag_img.GetSize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7edfc0cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spacing (20.0, 10.4, 10.4)\n",
+      "direction (1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0)\n",
+      "size (2086, 127, 1276)\n",
+      "dim 3\n",
+      "pixel type 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('spacing', sag_img.GetSpacing())\n",
+    "print('direction', sag_img.GetDirection())\n",
+    "print('size', sag_img.GetSize())\n",
+    "print('dim', sag_img.GetDimension())\n",
+    "print('pixel type', sag_img.GetPixelID())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "79a15925",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outpath = os.path.join(reg_path, brain, 'sag_nii.nii')\n",
+    "sitk.WriteImage(sag_img, outpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9575af91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "composite_transform = sitk.Transform(3, sitk.sitkEuler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3cb91fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
