Consistent results in error visualization

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,25 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eddyod/programming/pipeline/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
     "import SimpleITK as sitk\n",
-    "\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -42,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -57,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_origins(animal):\n",
+    "def get_origins(animal, scale):\n",
     "    \"\"\"\n",
     "    Fetches the origins from disk. The data is already scaled to 10um.\n",
     "    \"\"\"\n",
@@ -76,7 +68,7 @@
     "        structure = Path(file).stem\n",
     "        filepath = os.path.join(dirpath, file)\n",
     "        origin = np.loadtxt(filepath)\n",
-    "        origins[structure] = origin * 10\n",
+    "        origins[structure] = origin * scale\n",
     "    return origins\n",
     "\n",
     "def compute_affine_transformation(src_pts, dst_pts):\n",
@@ -119,52 +111,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b6548580",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "49\n",
-      "[[ 9.23410640e-01  4.25674435e-03 -2.94449797e-02 -2.40165854e+02]\n",
-      " [ 8.88233835e-02  1.24662615e+00  8.04230976e-02 -3.08364670e+03]\n",
-      " [ 6.54347473e-02  5.25420672e-02  1.16061418e+00 -2.90479092e+02]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
-      "rmse 137.6697816864496\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "moving_name = 'MD585'\n",
+    "moving_name = 'MD594'\n",
     "fixed_name = 'Allen'\n",
-    "moving_all = get_origins(moving_name)\n",
-    "fixed_all = get_origins(fixed_name)\n",
+    "moving_all = get_origins(moving_name, scale=10)\n",
+    "fixed_all = get_origins(fixed_name, scale=10)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
-    "bad_keys = ('10N_L','10N_R')\n",
+    "bad_keys = ('10N_L')\n",
     "good_keys = set(common_keys) - set(bad_keys)\n",
     "#good_keys = ['3N_L','3N_R', '4N_L','4N_R', '5N_L', '5N_R', '6N_L', '6N_R']\n",
-    "#good_keys.extend(['7N_L','7N_R'])\n",
+    "#good_keys.extend(['7N_L','7N_R', 'SC', 'IC'])\n",
     "\n",
     "moving_src = np.array([moving_all[s] for s in good_keys])\n",
     "fixed_src = np.array([fixed_all[s] for s in good_keys])\n",
-    "print(len(good_keys))\n",
     "transformation_matrix, rmse, predictions = compute_affine_transformation(moving_src, fixed_src)\n",
     "data_path = \"/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration\"\n",
     "print(transformation_matrix)\n",
-    "print('rmse', rmse)\n",
+    "print('# used keys', len(good_keys))\n",
     "\n",
     "df_list = []\n",
     "predicted_dict = {}\n",
+    "predictions = []\n",
+    "actuals = []\n",
     "for structure in common_keys:    \n",
     "    moving0 = np.array(moving_all[structure])\n",
     "    fixed0 = np.array(fixed_all[structure]) \n",
     "    predicted0 = affine_transform_point(moving0, transformation_matrix)\n",
-    "    difference = [a - b for a, b in zip(predicted0, fixed0)]   \n",
-    "    row = [structure, np.round(moving0,2), np.round(fixed0,2), np.round(predicted0,2), np.round(difference,2)]\n",
+    "    difference = [a - b for a, b in zip(moving0, fixed0)]\n",
+    "    abs_diff = sum([abs(a) for a in difference])\n",
+    "    row = [structure, np.round(moving0,2), np.round(fixed0,2), np.round(predicted0,2), abs_diff]\n",
     "    df_list.append(row)\n",
-    "    predicted_dict[structure] = predicted0"
+    "    predicted_dict[structure] = predicted0\n",
+    "    predictions.append(predicted0)\n",
+    "    actuals.append(fixed0)\n",
+    "cases = len(actuals)\n",
+    "print('len common keys', cases)\n",
+    "meanSquaredError = ((np.array(predictions) - np.array(actuals)) ** 2).mean() \n",
+    "rmse = np.sqrt(meanSquaredError)\n",
+    "print('RMSE', rmse)"
    ]
   },
   {
@@ -222,11 +210,11 @@
    },
    "outputs": [],
    "source": [
-    "columns = ['structure', moving_name, fixed_name, 'predicted', 'difference']\n",
+    "columns = ['structure', moving_name, fixed_name, 'predicted', 'abs_diff']\n",
     "df = pd.DataFrame(df_list, columns=columns)\n",
     "df.index.name = 'Index'\n",
     "df = df.round(2)\n",
-    "df.sort_values(by=['structure'], inplace=True)\n",
+    "df.sort_values(by=['abs_diff'], inplace=True)\n",
     "#df.to_csv('/home/eddyod/programming/pipeline/docs/sphinx/source/_static/results.csv', index=False)\n",
     "df.head(50)\n",
     "#20\t3N_R\t[1079.0, 531.0, 485.0]\t[910.0, 380.0, 17.0]\t[873.0, 358.0, 298.0]\t[-37.0, -21.0, 281.0]\t284.3851\n",
@@ -235,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4c6742ae",
    "metadata": {},
    "outputs": [],
@@ -301,31 +289,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8281922d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "R, error = fit_affine_3d(moving_src, fixed_src)"
+    "R, error = fit_affine_3d(moving_src, fixed_src)\n",
+    "print(error)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6b9203d2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "62.84443795982029"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "error"
    ]
