Testing COM at 10um creation in create atlas

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -111,14 +119,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b6548580",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 8.24119206e-01 -3.92029035e-02  3.68129400e-02  1.44762719e+02]\n",
+      " [ 3.55587293e-02  1.29752571e+00  6.91760194e-02 -3.56387049e+03]\n",
+      " [-6.65947731e-03 -7.02416064e-02  1.13388043e+00  1.03208948e+03]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "# used keys 39\n",
+      "len common keys 39\n",
+      "RMSE 596.4154898344459\n"
+     ]
+    }
+   ],
    "source": [
-    "moving_name = 'MD594'\n",
+    "moving_name = 'AtlasV8'\n",
     "fixed_name = 'Allen'\n",
-    "moving_all = get_origins(moving_name, scale=10)\n",
+    "moving_all = get_origins(moving_name, scale=1)\n",
     "fixed_all = get_origins(fixed_name, scale=10)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
     "bad_keys = ('10N_L')\n",
@@ -174,10 +196,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4e7b269b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AtlasV8 SC non trans [9909. 3155. 2653.]\n",
+      "Allen SC [8210. 1010. 3650.]\n",
+      "AtlasV8 SC apply trans [8284.99 1065.53 3753.06]\n",
+      "AtlasV8->Allen error SC [ 74.98688952  55.52740161 103.06153032]\n"
+     ]
+    }
+   ],
    "source": [
     "#transformation_matrix = np.hstack([transformation_matrix, t])\n",
     "#transformation_matrix = np.vstack([transformation_matrix, np.array([0, 0, 0, 1])])\n",
@@ -190,7 +223,6 @@
     "    com = moving_all[structure]\n",
     "#comtfm = np.array([824.6051918494063, 80.83004570523167, 363.4390121956811])\n",
     "transformed_structure = affine_transform_point(com, transformation_matrix)\n",
-    "\n",
     "print(f'{moving_name} {structure} non trans {np.round(np.array(com))}')\n",
     "print(f'{fixed_name} {structure} {np.round(np.array(fixed_all[structure]))}')\n",
     "print(f'{moving_name} {structure} apply trans {np.round(transformed_structure,2)}')\n",
